--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: #e9eef3;
+  background: #e22323;
 }
 
 .app {
@@ -17,18 +17,27 @@ html, body {
 
 /* HEADER */
 .top-bar {
-  height: 52px;
+  height: 130px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 10px;
-  padding: 0 16px;
-  background: linear-gradient(145deg, #003366, #0055aa);
+  justify-content: center;
+  gap: 6px;
+  padding: 8px;
+  background: linear-gradient(145deg, #d2262679, #0055aa);
   color: white;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
 
 .logo {
-  height: 30px;
+  height: 90px; /* logo x3 */
+}
+
+/* TÍTULO */
+.title {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
 }
 
 /* BUSCADOR */
@@ -57,6 +66,7 @@ html, body {
   width: 42px;
   height: 42px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 /* CHIPS */
@@ -74,6 +84,7 @@ html, body {
   font-size: 14px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   white-space: nowrap;
+  cursor: pointer;
 }
 
 /* MAPA */
@@ -81,4 +92,15 @@ html, body {
   flex: 1;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
+  overflow: hidden;
+}
+
+/* FOOTER */
+.footer {
+  text-align: center;
+  font-size: 12px;
+  padding: 6px 10px;
+  background: #ffffff;
+  color: #333;
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.15);
 }
